demo/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking-demo
  labels:
    name: networking-demo
    purpose: demonstration
