demo/01-pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-demo
  labels:
    app: net-demo
spec:
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'sleep 3600']
      securityContext:
        capabilities:
          add: ["NET_ADMIN"]
