demo/02-clusterip-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-demo
spec:
  selector:
    app: net-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
