demo/03-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-demo
spec:
  type: NodePort
  selector:
    app: net-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
