demo/04-loadbalancer-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-demo
spec:
  type: LoadBalancer
  selector:
    app: net-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
