demo/04-nodeport-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodeport-demo
  namespace: networking-demo
  labels:
    app: cni-demo
    service-type: nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
    protocol: TCP
    name: http
  selector:
    app: cni-demo
