demo/05-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-demo
  namespace: networking-demo
  labels:
    app: cni-demo
    service-type: loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: cni-demo
