demo/10-dns-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-test-service
  namespace: networking-demo
  labels:
    app: dns-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: cni-demo
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: networking-demo
  labels:
    app: dns-demo
spec:
  type: ExternalName
  externalName: httpbin.org
  ports:
  - port: 80
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: dns-test-pod
  namespace: networking-demo
  labels:
    app: dns-demo
spec:
  containers:
  - name: dns-test
    image: busybox:1.35
    command: ["/bin/sh", "-c"]
    args:
    - |
      [...]
