demo/05-ingres-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: net-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterip-demo
                port:
                  number: 80
