demo/07-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-demo
  namespace: networking-demo
spec:
  podSelector:
    matchLabels:
      app: cni-demo
      role: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cni-demo
          role: backend
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: cni-demo
          role: backend
    ports:
    - protocol: TCP
      port: 80
  - to: []
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 443
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shared-namespace-network-policy
  namespace: networking-demo
spec:
  podSelector:
    matchLabels:
      app: shared-namespace-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: networking-demo
    ports:
    - protocol: TCP
      port: 80
